<resources>
    <string name="app_name">Programacion Movil</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Nombre de Usuario</string>
    <string name="register">Registro</string>
    <string name="back_to_login">Volver al login</string>
    <string name="menu_opciones">Opciones</string>
    <string name="diario">Diario</string>
    <string name="info_diaria">Informacion Diaria</string>
    <string name="txt_diario"> </string>
    <string name="contracciones"> Contracciones </string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="title_activity_semana_peso_feto">Semana_peso_feto</string>
    <string name="semana17">semana 17</string>
    <string name="semana18_29">semana 18 a la 29</string>
    <string name="últimas_semanas">últimas semanas </string>
    <string name="semana">Inf. Semana a Semana y tamaño del feto</string>
    <string name="title_activity_semana_feto">Semana_feto</string>
    <string name="tab_text_1">Semana 17</string>
    <string name="tab_text_2">Semana 18-29</string>
    <string name="tab_text_3">Ultimas Semanas</string>
    <string name="escribir_nota">Escribir Nota</string>
    <string name="boton_diario">Diario</string>

    <string name="txt_codigo">Codigo</string>
    <string name="txt_titulo">Titulo de la Nota</string>
    <string name="txt_descripcion">Descripcion de la Nota</string>
    <string name="txt_fecha">Fecha</string>

    <string name="boton_agregar">Agregar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_eliminar">Eliminar</string>

    <string name="ID">Interfaz</string>
    <string name="codigo">Codigo</string>

    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="boton_refrescar">Refrescar</string>

    <string name="tv1">Las ecografías son de gran importancia durante el embarazo,
                       ya que permiten descartar ciertas anomalías en el feto.
                       Es recomendable, realizarse al menos 3 ecografías, una en cada trimestre,
                       Hay diferentes tipos de ecografía, pero la bidimensional o 2D es la más utilizada y
                       con ella se pueden detectar hasta el 90% de las anomalías.</string>

    <string name="tv_pesoInicial">Peso inicial</string>
    <string name="tv_ingresarpeso">Ingresar peso del primer día del último periodo:</string>

    <string name="tv_peso">00,0</string>
    <string name="tv_pesoActual">Peso actual</string>
    <string name="tv_ingresarpesoactual">Ingresar peso actual:</string>
    <string name="aumentoPeso">El aumento total de peso</string>
    <string name="botonGuardar">Guardar peso</string>
    <string name="imgDescription">imagenPeso</string>

    <string name="tvpesoIni">Peso Inicial</string>
    <string name="tvpesoActual">Peso Actual</string>
    <string name="tv_IngresarPeso">Ingresar peso y fecha del último periodo:</string>
    <string name="tvIngresarPesoActual">Ingresar peso y fecha actuales:</string>
    <string name="et_peso">00.0 klg</string>
    <string name="botonFecha">Fecha</string>
    <string name="et_fecha">00/00/00</string>
    <string name="botonRegistrar">Registrar peso</string>

    <string name="tv_fecha">Fecha:</string>
    <string name="tvAumento">Aumento</string>
    <string name="tvfecha">00/00/00</string>
    <string name="tvpeso">00.0 klg</string>
    <string name="consejo">La mayoría de las mujeres debe aumentar
                           entre 25 y 35 libras (11.5 a 16 kilogramos)
                           durante el embarazo.</string>

    <string name="title_activity_create_note">Cita</string>

    <string name="title">Test</string>

    <string name="detail">Small Text</string>


    <string-array name="note_type">

        <!-- <item>Normal</item>

         <item>Standard</item>

         <item>Urgent</item>-->
        <item>Notificacion</item>

    </string-array>

    <string name="title_activity_information">Informacion</string>

    <string name="title_activity_edit__note">Editar Cita</string>

    <string name="New">Realizar recordatorio de cita</string>

    <string name="back">Atras</string>

    <string name="save">Guardar Cita</string>

    <string name="edit">Editar Cita</string>

    <string name="discard">Discard Cita</string>

    <string name="note_type_text">Cita:</string>

    <string name="title_activity_alert">Alertar</string>

    <string name="Not_Set">Sin escojer</string>

    <string name="hour_minutes">HH:mm</string>

    <string name="alert_title">title</string>
    <string name="set_notify">Notificacion</string>
    <string name="added_alert">An Alerta puede ser agregada</string>
    <string name="notify">puedes recivir notifications</string>
    <string name="rodId">ID</string>

    <string name="Alertnotifty">"Alerta: "</string>

    <string name="alerttitle">titutlo</string>

    <string name="delete_title">Eliminar esta cita</string>

    <string name="delete_message">estas segura?</string>

    <string name="yes">Si</string>

    <string name="no">No</string>

    <string name="rodID">ID</string>

    <string name="rowID">ID</string>

    <string name="row_id">ID</string>

    <string name="intent_row_id">ID</string>

    <string name="row_id_long">rowID</string>

    <string name="alarm_active">Una Alerta ouede ser agregada!</string>

    <string name="row_id_log">ID</string>

    <string name="title_hint"> Nombre del Doc</string>

    <string name="hint_description">Descripcion acerca de la cita</string>

    <string name="set_alert">Establecer cita</string>

    <string name="textview_date">Seleccionar Fecha</string>

    <string name="txt_time">Ingrese la hora:</string>

    <string name="txt_edit_hint">Nombre del Doc</string>

    <string name="detail_hint">Ingrese descripcion de la cita</string>

    <string name="type_note">Tipo:</string>

    <string name="view_title">Large Text</string>

    <string name="view_detail">Medium Text</string>

    <string name="note_type">Medium Text</string>

    <string name="type_list_entry">Small Text</string>

    <string name="time_vie">testtime</string>

    <string name="alarmtext">Alerta: </string>

    <string name="dateformate">dd/MM/yyyy</string>

    <string name="Not_Set_Alert">Sin Establecer</string>

    <string name="ok">Ok</string>

    <string name="title_msg">Titulo</string>

    <string name="titttle">Titulo</string>
    <string name="alert_content">alert_contenido</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feto_semana">FetoSemana</string>
</resources>