<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.loopwiki.loginregisterwithsqlite.ui.home.HomeFragment"
        android:label="@string/semana18_29"
        tools:layout="@layout/fragment_2etapa" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.loopwiki.loginregisterwithsqlite.ui.dashboard.DashboardFragment"
        android:label="@string/semana17"
        tools:layout="@layout/fragment_1etapa" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.loopwiki.loginregisterwithsqlite.ui.notifications.NotificationsFragment"
        android:label="@string/últimas_semanas"
        tools:layout="@layout/fragment_ultima" />
</navigation>