<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".peso_madre.Peso_Madre_Activity">


    <TextView
        android:id="@+id/tvpesoInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:textColor="#0A0A0A"
        android:text="@string/tvpesoIni"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_IngresarPeso"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="84dp"
        android:text="@string/tv_IngresarPeso"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="119dp"
        android:ems="10"
        android:hint="@string/et_peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="187dp"
        android:background="#FFFFFF"
        android:onClick="onClickInicial"
        android:text="@string/botonFecha"
        android:textColor="#F6CDE6"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:ems="10"
        android:hint="@string/et_fecha"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_pesoActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="266dp"
        android:textColor="#0A0A0A"
        android:text="@string/tvpesoActual"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_IngresarActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="331dp"
        android:text="@string/tvIngresarPesoActual"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="517dp"
        android:layout_marginEnd="27dp"
        android:background="#FFFFFF"
        android:onClick="guardar"
        android:textColor="#F6CDE6"
        android:text="@string/botonGuardar"
        android:textSize="36sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="27dp" />

    <EditText
        android:id="@+id/etPeso2"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="369dp"
        android:ems="10"
        android:hint="@string/et_peso"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bFecha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="439dp"
        android:background="#FFFFFF"
        android:textColor="#F6CDE6"
        android:onClick="onClickActual"
        android:text="@string/botonFecha" />

    <EditText
        android:id="@+id/etFecha2"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:ems="10"
        android:hint="@string/et_fecha"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

</RelativeLayout>